# PROTON

./: .gitignore  Makefile  README.md  pyproject.toml
conf/: default.config.yaml
docs/: drug_ranking_comparison.md  signed_edge_evaluation.md
notebooks/: embedding_analysis.ipynb  kg_visualization.ipynb
scripts/: compare_drug_rankings.py  evaluate_drug_repurposing.py
src/: dataloaders.py
src/cli/: __main__.py
src/config/: __init__.py  models.py
src/explainer/utils/: general.py
src/models/: bilinear_decoder.py  hgt.py
src/splits/: utils.py
src/train/: pretrain.py  run_train.py
